3.0 重构阶段 1：纯清理（零行为变更，净减 1646 行）
按 7 个分区并行清理 90 个 Java 文件（core 与 minecraft 全部包）。

- 删除复述式注释/JavaDoc 与全部 @author：注释 3210 → 1654 行
- 删除可证明零引用的死代码：DmccRconConsoleSource#prepareForCommand、
  FabricDMCC 显式空构造器、JsonUtils#readAll、DMCC 两处注释掉的死调用、
  13 个命令类的冗余显式无参构造器
- Java 25 惯用写法替换 30 余处：HexFormat.of().formatHex、
  GZIPInputStream#readAllBytes、Path.of、.toList()、String#formatted、
  Comparator.comparing().reversed()、静态 DateTimeFormatter/Pattern、
  Arrays.copyOfRange + String.join

验证：javap -p -c -constants 逐类字节码比对 202 个 class
（identical 182 / changed 20 / added 0 / removed 0，changed 集合与各分区
申报的非注释改动完全一致，全部新增非注释行 91 行已逐行复核）；
./gradlew build -x test BUILD SUCCESSFUL；产物 jar 13,244,428 字节。

全仓统计：总行 17240 → 15594（代码 11866 → 11800，注释 3210 → 1654，
空行 2164 → 2140）。CHANGELOG_TEMP.md 新增「工作 05」。